--- a/tests/e2e/daemonset-features/01-install.yaml
+++ b/tests/e2e/daemonset-features/01-install.yaml
@@ -6,6 +6,7 @@ spec:
   mode: daemonset
   terminationGracePeriodSeconds: 600
   hostNetwork: true
+  hostPID: true
   config: |
     receivers:
       jaeger:
