test(e2e): changes 'e2e/deamonset-features' to use opentelemetry.io/v1beta1 instad of opentelemetry.io/v1alpha1
---------

Signed-off-by: Simon Olander <simon.olander@sap.com>

--- a/tests/e2e/daemonset-features/01-install.yaml
+++ b/tests/e2e/daemonset-features/01-install.yaml
@@ -1,4 +1,4 @@
-apiVersion: opentelemetry.io/v1alpha1
+apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: daemonset
@@ -7,7 +7,7 @@ spec:
   terminationGracePeriodSeconds: 600
   hostNetwork: true
   hostPID: true
-  config: |
+  config:
     receivers:
       jaeger:
         protocols:
