--- a/bundle/openshift/manifests/opentelemetry-operator.clusterserviceversion.yaml
+++ b/bundle/openshift/manifests/opentelemetry-operator.clusterserviceversion.yaml
@@ -548,7 +548,7 @@ spec:
                   valueFrom:
                     fieldRef:
                       fieldPath: metadata.namespace
-                image: controller
+                image: ghcr.io/open-telemetry/opentelemetry-operator/opentelemetry-operator:0.142.0
                 livenessProbe:
                   httpGet:
                     path: /healthz
