--- a/tests/e2e-webhook-metrics/webhook-metrics-java/chainsaw-test.yaml
+++ b/tests/e2e-webhook-metrics/webhook-metrics-java/chainsaw-test.yaml
@@ -29,11 +29,31 @@ spec:
         - podLogs:
             selector: app=java-test-app
     
-    - name: step-02-verify-webhook-metrics
+    - name: step-02-get-operator-service
+      description: Get the operator service name for metrics access
+      try:
+        - command:
+            entrypoint: kubectl
+            args:
+              - get
+              - service
+              - -n
+              - opentelemetry-operator-system
+              - -l
+              - app.kubernetes.io/name=opentelemetry-operator
+              - -o
+              - jsonpath={.items[0].metadata.name}
+            outputs:
+              - name: serviceName
+                value: ($stdout)
+    
+    - name: step-03-verify-webhook-metrics
       description: Verify pod mutation metrics are exposed on operator's metrics endpoint
       try:
         - script:
             env:
+              - name: serviceName
+                value: ($serviceName)
               - name: OPERATOR_NAMESPACE
                 value: "opentelemetry-operator-system"
             timeout: 120s
@@ -41,15 +61,7 @@ spec:
               #!/bin/sh
               set -e
               
-              # Get the operator pod name
-              OPERATOR_POD=$(kubectl get pod -n ${OPERATOR_NAMESPACE} -l control-plane=controller-manager -o jsonpath='{.items[0].metadata.name}')
-              
-              if [ -z "$OPERATOR_POD" ]; then
-                echo "ERROR: Could not find operator pod"
-                exit 1
-              fi
-              
-              echo "Found operator pod: ${OPERATOR_POD}"
+              echo "Using service: ${serviceName}"
               
               # DEBUG: Print operator deployment args to verify the flag is present
               echo ""
@@ -57,21 +69,13 @@ spec:
               kubectl get deployment -n ${OPERATOR_NAMESPACE} -o jsonpath='{.items[0].spec.template.spec.containers[0].args}' | tr ',' '\n'
               echo ""
               
-              # DEBUG: Print operator logs to check for initialization issues
+              # Fetch metrics using kubectl get --raw (this handles authentication)
               echo ""
-              echo "=== Operator Logs (last 50 lines) ==="
-              kubectl logs -n ${OPERATOR_NAMESPACE} ${OPERATOR_POD} --tail=50 || echo "Could not get logs"
-              echo ""
-              
-              # Port-forward to the operator's metrics endpoint and fetch metrics
-              kubectl port-forward -n ${OPERATOR_NAMESPACE} pod/${OPERATOR_POD} 8443:8443 &
-              PF_PID=$!
-              sleep 5
-              
-              # Fetch metrics with retries
+              echo "=== Fetching metrics via kubectl get --raw ==="
               for i in 1 2 3 4 5 6 7 8 9 10; do
                 echo "Attempt $i to fetch metrics..."
-                METRICS=$(curl -sk https://localhost:8443/metrics 2>/dev/null || true)
+                # Use kubectl get --raw to access the metrics endpoint with proper auth
+                METRICS=$(kubectl get --raw "/api/v1/namespaces/${OPERATOR_NAMESPACE}/services/${serviceName}:8443/proxy/metrics" 2>/dev/null || true)
                 if echo "$METRICS" | grep -q "opentelemetry_operator_pod_mutations_total"; then
                   echo "Found metric!"
                   break
@@ -79,22 +83,14 @@ spec:
                 sleep 3
               done
               
-              # Kill port-forward
-              kill $PF_PID 2>/dev/null || true
-              
               # Debug: Print pod details to see if mutation happened
               echo ""
               echo "=== Checking if mutation actually happened ==="
               kubectl get pod -n ${NAMESPACE} java-test-app -o yaml | grep "initContainers" -A 5 || echo "No initContainers found!"
               
-              # DEBUG: Print all available metrics (first 100 lines)
-              echo ""
-              echo "=== Available metrics (first 100 lines) ==="
-              echo "$METRICS" | head -100
-              echo ""
-              
               # Check for the expected metric
               if echo "$METRICS" | grep -q "opentelemetry_operator_pod_mutations_total"; then
+                echo ""
                 echo "SUCCESS: Found opentelemetry_operator_pod_mutations_total metric"
                 
                 # Verify specific labels
@@ -121,9 +117,13 @@ spec:
                 echo "$METRICS" | grep "opentelemetry_operator_pod_mutations_total" || echo "(no matching lines)"
                 exit 0
               else
+                echo ""
                 echo "ERROR: opentelemetry_operator_pod_mutations_total metric not found"
                 echo ""
                 echo "=== All metrics containing 'opentelemetry' ==="
                 echo "$METRICS" | grep -i "opentelemetry" | head -30 || echo "(none found)"
+                echo ""
+                echo "=== First 50 lines of metrics output ==="
+                echo "$METRICS" | head -50
                 exit 1
               fi
